Fixed truncation of html fields using jquery-truncate-html.

--- a/assets/less/ev-script.less
+++ b/assets/less/ev-script.less
@@ -355,7 +355,7 @@ div.ev-results {
         border-bottom: 1px solid @border-color;
         font-weight: bold;
       }
-      .desc a {
+      .trunc a {
         margin-left: 5px;
       }
       .label {
